# dots

./: #README.md  .gitignore  LICENSE  README.md  config.json  config.toml  install.sh  setup.py
configs/: TODO  packages
configs/config/: redshift.conf  weston.ini
configs/home/: .Xresources  .aliases  .axelrc  .bash_profile  .bashrc  .compton.conf  .cwmrc  .fonts.conf  .gitconfig  .npmrc  .picom.conf  .profile  .tmux.conf  .vimrc  .xbindkeysrc  .xinitrc  bashrc  gitconfig  profile
deprecated/cwmstatus/: Makefile  cwmbar
deprecated/scripts/: nodejs.sh  python.sh
deprecated/xorg/: info  install.sh
deprecated/zed/: settings.json
environments/golang/: Dockerfile
environments/node/: Dockerfile
environments/python/: Dockerfile
knowledge-base/change_brightness/: change_brightness
modules/: __init__.py  linkFiles.py
nix/: configuration.nix
programs/pkg/: .gitignore  CMakeLists.txt  Cargo.toml  Makefile
programs/pkg/src/: main.c  main.cpp  main.rs
programs/wifi/: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml
programs/wifi/src/: main.cpp  main.rs
setup/: 01-upgrade.sh  02-packages.sh  03-flatpaks.sh  04-link-dots.sh  05-openbox.sh  06-java.sh  clang.lua  clang.sh  config.json  config.toml  cwm.sh  docker.sh  fish.sh  flatpak.sh  font-rendering.sh  go-packages.sh  go_install.sh  go_packages.sh  golang.sh  helix.sh  java.sh  jdk.sh  link-config.sh  link-files.sh  link-home.sh  link_files.py  link_files.sh  lua.sh  nodejs.sh  ocaml.sh  openbox.sh  packages.sh  python.sh  raylib.sh  rust.sh  sdkman.sh  setup.py  updates.sh  zig.sh
(+2019 files in other folders)
