cmake_minimum_required(VERSION 3.10) 
project(wifi VERSION 1.0 LANGUAGES CXX)
set(CMAKE_C_COMPILER "gcc")
set(CMAKE_C_STANDARD 21) 
set(CMAKE_BUILD_TYPE Release)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
add_compile_options(-Wall -Wextra -pedantic -Werror)

add_executable(wifi src/main.cpp)
target_include_directories(wifi PUBLIC "include")
target_link_libraries(wifi PRIVATE m)